[package]
name = "fontui"
version = "0.1.0"
authors = ["sereyvathana <sereyvathana10@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
font = { path = "../../lib" }
iced = { version = "0.2"}
toml = "0.5"
serde = { version = "1.0.123", features = ["derive"] }
serde_json = "1.0"  